tests/error/type_match/switch_expr_ambiguous.bz
// error: different types deduced for different cases in switch expression while matching to type 'auto'
// note: type was first deduced as 'i32'
// note: type was later deduced as 'i64'
function test(val: i32)
{
	let _ = switch (val) {
		0 => 0,
		1 => 1i64,
		else => 2i16,
	};
}
